# hyda

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  train.py  visualize_tsne.py
brain_mri/configs/: baseline.yaml  domain_clf.yaml  hyper.yaml
brain_mri/data/: __init__.py  data_module.py  dataset.py
brain_mri/models/: brain_age.py  brain_age_hypernet.py  domain_classifier.py
brain_mri/pl_modules/: __init__.py  baseline.py  domain_classifier.py  hypernet.py
checkpoints/: pacs_domain_clf.ckpt
chest_xray/configs/: baseline.yaml  dann.yaml  domain_clf.yaml  hyper.yaml  mdan.yaml
chest_xray/data/: __init__.py  data_module.py  dataset.py  sampler.py
chest_xray/models/: __init__.py  cxr_densenet.py  cxr_hypernet.py  domain_classifier.py  loss.py
chest_xray/pl_modules/: __init__.py  baseline.py  dann.py  domain_classifier.py  hypernet.py  mdan.py
hyda/: layers.py  utils.py
pacs/configs/: pacs_baseline.yaml  pacs_domain_clf.yaml  pacs_hyper.yaml
pacs/data/: __init__.py  data_module.py  dataset.py
pacs/models/: __init__.py  domain_classifier.py  loss.py  pacs_hypernet.py  pacs_resenet.py  tent.py
pacs/pl_modules/: __init__.py  baseline.py  domain_classifier.py  hypernet.py
scripts/: eval_tent.py  test.sh
