[project]
name = "hyda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonargparse[signatures]>=4.27.7",
    "lightning>=2.6.0",
    "pandas>=2.3.3",
    "pytorch-metric-learning>=2.9.0",
    "scikit-image>=0.24.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.23.0",
    "wandb>=0.26.1",
]
